<resources>
    <string name="app_name">Sling Academy Users</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_job">Job</string>
    <string name="no_user_fetched">No users could be fetched — none found!</string>
</resources>