<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.blogspot.thengnet.slingacademyusers.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp">

                <LinearLayout
                    android:id="@+id/linearUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textPersonName|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.firstName}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textPersonName|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.lastName}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- TODO: Replace with a Spinner populated locally -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_date_of_birth"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.dateOfBirth}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- TODO: Replace with a Spinner populated locally -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_gender"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.gender}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_e_mail"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textEmailAddress"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.eMail}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_contact_page_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="phone"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.phoneNumber}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- TODO: Replace with a Spinner populated locally or from an API -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_country"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.country}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_state"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.state}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_city"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.city}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_street"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.street}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_latitude"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{String.valueOf(user.theLatitude)}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_longitude"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{String.valueOf(user.theLongitude)}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_zipcode"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapCharacters"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.zipcode}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_job"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textCapWords"
                            android:letterSpacing="0.02"
                            android:singleLine="true"
                            android:text="@{user.job}"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>